# magic-domain-program

./: .gitignore  Cargo.toml  README.md  magic-domain.json
.github/workflows/: build-and-test.yml
src/: consts.rs  entrypoint.rs  lib.rs
src/instructions/: mod.rs  register.rs  sync.rs  unregister.rs
src/instructions/version/: v0.rs
src/processors/: mod.rs  register.rs  sync.rs  unregister.rs
src/state/: features.rs  mod.rs  record.rs  status.rs  validator_info.rs
src/state/version/: v0.rs
tests/: common.rs  test_registration.rs  test_sync.rs  test_sync_info.rs  test_unregistration.rs
