[package]
name = "magic-domain-program"
description = "Domain registration program for Ephemeral Rollups"
version = "0.1.0"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/magic-domain-program"
readme = "./README.md"
keywords = ["solana", "crypto", "registration", "ephemeral-rollups", "magicblock"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mdp"

[dependencies]
# solana
solana-program = { version = "1.18.25" }
security-txt = { version = "1.1.1", package = "solana-security-txt", optional = true }
 
# serialization/deserialization
borsh = { version = "1.5.3", features = [ "derive" ] }
serde = { version = "1.0", features = [ "derive" ], optional = true }

[dev-dependencies]
program-test = { package = "solana-program-test", version = "1.18.25" }
sdk = { package = "solana-sdk", version = "1.18.25" }
tokio = { version = "1.0", features = [ "macros", "rt" ] }

[features]
entrypoint = ["security-txt"]
default = ["entrypoint"]
no-entrypoint = ["serde"]



